public/css/style.css
body, html
{	
	/*source: https://www.pexels.com/pl-pl/zdjecie/spokojne-cialo-jeziora-miedzy-gorami-346529/*/
	/*background-color: rgb(116, 158, 242);*/
	/*background-color: rgb(141, 176, 247);*/
	background-color: #26282E;
	/*background-size: cover;*/	
	font-size: 16px;
	width: 100%;	
	font-family: 'Lato', sans-serif !important; 
	margin: 0px;
}

.mainNav
{	
	background-color: transparent;
	
}

.navbar-brand
{	
	font-size: 60px;	
	letter-spacing: 5px;	
	/*margin: 10px;*/
	margin: 5px;
	padding: 5px;
	font-weight: bold;
	/*color: #060B95;*/
	color: #209781;	
	white-space: pre-wrap;	
	
}

.navbar-brand:hover   { color: #E9B64A; }

h2
{	
	text-align: center;
	padding: 10px;
	font-size: 30px;
	letter-spacing: 2px;	
	color: white;	
	background-color: secondary;	
}

@media(max-width: 767px)
{
	.navbar-brand
	{
		padding: 0px;
		margin: 0px;
		font-size: 30px;
		letter-spacing: 1px;
	}
	p
	{
		font-size: 17px;			
	}
	h2
	{
		padding: 2px;
		font-size: 24px;
		letter-spacing: 1px;
		}
	h3
	{
		font-size: 21px;
	}
	h4
	{		
		font-size: 21px;		
	}
}
p
{	
	color: #060B95;	
	text-align: justify;	
}

blockquote > p
{
	color: #209781;
}


.inputContainer
{
	width: 350px;
	margin: 10px  auto;	
	padding-bottom: 100px;
}

/* //////////////////  SIGNUP  /////////////////////// */

button.register
{	
	width: 100%;
	/*background-color: #008000;*/
	background-color: #E9B64A;
	font-size: 20px;
	color: white;
	padding: 10px;
	margin-top: 10px;	
	letter-spacing: 2px;
}

button.register:focus
{
	/*-webkit-box-shadow: 0px 0px 5px 5px rgba(165,205,165,0.9);
	-moz-box-shadow: 0px 0px 5px 5px rgba(165,205,165,0.9);
	box-shadow: 0px 0px 5px 5px rgba(165,205,165,0.9);*/
	/*border: 1px solid  white;*/
	-webkit-box-shadow: 0px 0px 5px 5px rgba(32,151,129,0.9);
	-moz-box-shadow: 0px 0px 5px 5px rgba(32,151,129,0.9);
	box-shadow: 0px 0px 5px 5px rgba(32,151,129,0.9);
}

button.register:hover
{
	/*background-color: #229222;
	color: rgb(8, 236, 8);*/
	background-color: #209781;
}

/* Zmiana koloru czcionki placeholdera */
input.register::-webkit-input-placeholder
{
    color: #999;		
}
input.register:focus::-webkit-input-placeholder
{
    color: #008000;	
}
/* Firefox < 19 */
input.register:-moz-placeholder
{
    color: #999;	
}
input.register:focus:-moz-placeholder
{
    color: #008000;
}
/* Firefox > 19 */
input.register::-moz-placeholder
{
    color: #999;	
}
input.register:focus::-moz-placeholder
{
    color: #008000;
}
/* Internet Explorer 10 */
input.register:-ms-input-placeholder
{
    color: #999;	
}
input.register:focus:-ms-input-placeholder
{
    color: #008000;
}

/* //////////////////  FOOTER  /////////////////////// */

.info
{
	width: 100%;		
	text-align: center;
	font-size: 14px;
	position: fixed;
	bottom: 0;
	left: 0;
	background-color: #D3DDE9;
	padding: 3px;
	border: 1px solid  #c2cce8;
	color: #060B95;
	z-index: 200;	
}

/* //////////////////  LOGIN  /////////////////////// */

input[type=text],
input[type=email],
input[type=password],
input[type=number],
input[type=date],
.choice
{	
	font-family: 'Lato', sans-serif;
	width: 100%;	
	height: 36px;	
	color: #060B95;
	border: 1px solid  #c2cce8;
	font-size: 20px;	
	padding: 3px;
	box-sizing: border-box;
	outline: none;
	margin-top: 10px;	
}

input[type=text]:focus,
input[type=email]:focus,
input[type=password]:focus,
input[type=number]:focus,
input[type=date]:focus,
.choice:focus
{
	-webkit-box-shadow: 0px 0px 5px 1px rgba(157,199,247,0.9);
	-moz-box-shadow: 0px 0px 5px 1px rgba(157,199,247,0.9);
	box-shadow: 0px 0px 5px 1px rgba(157,199,247,0.9);	
	background-color: #F1F4F9;
	color: #060B95;
}

button.login
{	
	width: 100%;
	/*background-color: #060B95;*/
	background-color: #209781;
	font-size: 20px;
	color: white;
	padding: 10px;
	margin-top: 10px;
	letter-spacing: 2px;
}

button.login:focus
{
	/*-webkit-box-shadow: 0px 0px 5px 5px rgba(157,199,247,0.9);
	-moz-box-shadow: 0px 0px 5px 5px rgba(157,199,247,0.9);
	box-shadow: 0px 0px 5px 5px rgba(70, 76, 82, 0.9);*/
	/*border: 1px solid  white;*/
	-webkit-box-shadow: 0px 0px 5px 5px rgba(233,182,74,0.9);
	-moz-box-shadow: 0px 0px 5px 5px rgba(233,182,74,0.9);
	box-shadow: 0px 0px 5px 5px rgba(233,182,74, 0.9);
}

button.login:hover
{
	/*background-color: #050a84;
	color: rgb(148, 189, 243);*/
	background-color: #E9B64A;
}

/* Zmiana koloru czcionki placeholdera */
input::-webkit-input-placeholder
{
    color: #999;		
}
input:focus::-webkit-input-placeholder
{
    color: #060B95;
}
/* Firefox < 19 */
input:-moz-placeholder
{
    color: #999;	
}
input:focus:-moz-placeholder
{
    color: #060B95;
}
/* Firefox > 19 */
input::-moz-placeholder
{
    color: #999;	
}
input:focus::-moz-placeholder
{
    color: #060B95;
}
/* Internet Explorer 10 */
input:-ms-input-placeholder
{
    color: #999;	
}
input:focus:-ms-input-placeholder
{
    color: #060B95;
}

.icon
{	
	margin-top: 10px;	
	font-size: 20px;	
	padding: 5px 3px;	
	border: 1px solid  #c2cce8;
	background-color: #F1F4F9;
	color: #060B95;
	width: 36px;	
	box-sizing: border-box;
	height: 36px;	
}

/* //////////////////  MENU  /////////////////////// */

.navcontainer
{
	margin: auto;	
}

.navbar-nav .active
{
	background-color: #D3DDE9;	
}
 
 h3
{	
	color: #060B95;		
}

/* //////////////////  EXPENSE /////////////////////// */

option
{	
	background-color: white;
	height: 36px;		 
}

/* //////////////////  Balance /////////////////////// */

.table
{
	background-color: none;		
}

#chartContainer1,
#chartContainer2
{
	height: 500px;
	margin-left: auto;
	margin-right: auto; 
	margin-bottom: 10px;
}

/* //////////////////  SIGNUP.PHP /////////////////////// */
 
.error
{
	color: red;
	margin-top: 10px;
	margin-bottom: 10px;	
	background-color: white;
	border: 1px solid red;
	margin-left: auto;
	margin-right: auto;
	width: 100%;
	border-radius:3px;
	/*text-align: center;*/
	
}
	
/* //////////////////  LOGIN.HP /////////////////////// */
	
.information
{
	color:blue;
	margin-top: 10px;
	margin-bottom: 10px;
	background-color: #D3DDE9;
	border: 1px solid blue;	
}

/*////////////////// GAME //////////////////// */

#game
{
	margin: 0;
	background-color: #26282E;
	color: #209781;
    font-family: 'Lobster', sans-serif;
    font-size: 28px;
}

a:link    { color: #209781; text-decoration: none; }
a:visited { color: #209781; }
a:active  { color: #209781; }
a:hover   { color: #E9B64A; }

h1.game
{
	font-size: 64px;
	font-weight: 400;
	text-align: center;
	letter-spacing: 5px;
	margin-top: 5px;
	margin-bottom: 0px;
}

p.game
{
	color: #209781;
	text-align: center;
	margin-top: 5px;
	margin-bottom: 5px;
	letter-spacing: 2px;
}

.board
{
	width: 600px;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

.cardA
{
	width: 125px;
	height: 125px;
	display: inline-block;
	margin: 3px;
	background-image: url("../img/karta.png");
	border: 4px solid #e9b64a;
	border-radius: 4px;
	cursor: default;
	filter: brightness(100%);
	transition: all .3s ease-in-out;
}

.card
{
	width: 125px;
	height: 125px;
	display: inline-block;
	margin: 3px;
	background-image: url("../img/karta.png");
	border: 4px solid #51c8b2;
	border-radius: 4px;
	cursor: pointer;
	filter: brightness(70%);
	transition: all .3s ease-in-out;
}

.card:hover
{
	border: 4px solid #e9b64a;
	filter: brightness(100%);
}

.score
{
	margin-top: 5px;
	letter-spacing: 2px;
}

@media(max-width: 767px)
{
	h1.game
	{
		padding: 0px;
		margin: 0px;
		font-size: 30px;
		letter-spacing: 1px;
	}
	p.game
	{
		font-size: 17px;			
	}
}

.categoryName
{	
	display: inline-block;
	background-color: #D3DDE9;
	color: #060B95;  
	border: 1px solid  #c2cce8;
	width: 100%;	
}

.categoryName:hover
{
	background-color: #51c8b2;
	border: 1px solid  #51c8b2;
	color: #26282E;	
}

.transactionName
{	
	display: inline-block;
	background-color: #D3DDE9; 
	border: 1px solid  #c2cce8;
	width: 100%;
}

.transactionName:hover
{
	background-color: #51c8b2;
	border: 1px solid  #51c8b2;
	color: #26282E;	
}

